# ldk-node

./: .gitignore  Cargo.toml  build.rs  uniffi.toml
bindings/uniffi-bindgen/: Cargo.toml
scripts/: uniffi_bindgen_generate_go.sh
src/: builder.rs  event.rs  ldk_node.udl  lib.rs  uniffi_types.rs
tests/: common.rs
