[package]
name = "ldk_node"
version = "0.2.1"
authors = ["Elias Rohrer <dev@tnull.de>"]
homepage = "https://lightningdevkit.org/"
license = "MIT OR Apache-2.0"
edition = "2021"
description = "A ready-to-go node implementation built using LDK."
repository = "https://github.com/lightningdevkit/ldk-node/"
readme = "README.md"
keywords = ["bitcoin", "lightning", "ldk", "bdk"]
categories = ["cryptography::cryptocurrencies"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ldk_node_bindings"
crate-type = ["staticlib", "cdylib", "lib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[profile.release-smaller]
inherits = "release"
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic

[features]
default = []

[dependencies]
#lightning = { version = "0.0.121", features = ["std"] }
#lightning-invoice = { version = "0.29.0" }
#lightning-net-tokio = { version = "0.0.121" }
#lightning-persister = { version = "0.0.121" }
#lightning-background-processor = { version = "0.0.121", features = ["futures"] }
#lightning-rapid-gossip-sync = { version = "0.0.121" }
#lightning-transaction-sync = { version = "0.0.121", features = ["esplora-async-https", "time"] }
#lightning-liquidity = { version = "0.1.0-alpha", features = ["std"] }

lightning = { git = "https://github.com/lightningdevkit/rust-lightning", rev = "36e434d8cefe6b533a2ab378d2d65923433df373", features = ["std"] }
lightning-invoice = { git = "https://github.com/lightningdevkit/rust-lightning", rev = "36e434d8cefe6b533a2ab378d2d65923433df373" }
lightning-net-tokio = { git = "https://github.com/lightningdevkit/rust-lightning", rev = "36e434d8cefe6b533a2ab378d2d65923433df373" }
lightning-persister = { git = "https://github.com/lightningdevkit/rust-lightning", rev = "36e434d8cefe6b533a2ab378d2d65923433df373" }
lightning-background-processor = { git = "https://github.com/lightningdevkit/rust-lightning", rev = "36e434d8cefe6b533a2ab378d2d65923433df373", features = ["futures"] }
lightning-rapid-gossip-sync = { git = "https://github.com/lightningdevkit/rust-lightning", rev = "36e434d8cefe6b533a2ab378d2d65923433df373" }
lightning-transaction-sync = { git = "https://github.com/lightningdevkit/rust-lightning", rev = "36e434d8cefe6b533a2ab378d2d65923433df373", features = ["esplora-async"] }
lightning-liquidity = { git = "https://github.com/tnull/lightning-liquidity", rev = "d95852af98e77fe41098b45a48101c3924d5570e", features = ["std"] }

#lightning = { git = "https://github.com/lightningdevkit/rust-lightning", branch="main", features = ["std"] }
#lightning-invoice = { git = "https://github.com/lightningdevkit/rust-lightning", branch="main" }
#lightning-net-tokio = { git = "https://github.com/lightningdevkit/rust-lightning", branch="main" }
#lightning-persister = { git = "https://github.com/lightningdevkit/rust-lightning", branch="main" }
#lightning-background-processor = { git = "https://github.com/lightningdevkit/rust-lightning", branch="main", features = ["futures"] }
#lightning-rapid-gossip-sync = { git = "https://github.com/lightningdevkit/rust-lightning", branch="main" }
#lightning-transaction-sync = { git = "https://github.com/lightningdevkit/rust-lightning", branch="main", features = ["esplora-async"] }
#lightning-liquidity = { git = "https://github.com/lightningdevkit/lightning-liquidity", branch="main", features = ["std"] }

#lightning = { path = "../rust-lightning/lightning", features = ["std"] }
#lightning-invoice = { path = "../rust-lightning/lightning-invoice" }
#lightning-net-tokio = { path = "../rust-lightning/lightning-net-tokio" }
#lightning-persister = { path = "../rust-lightning/lightning-persister" }
#lightning-background-processor = { path = "../rust-lightning/lightning-background-processor", features = ["futures"] }
#lightning-rapid-gossip-sync = { path = "../rust-lightning/lightning-rapid-gossip-sync" }
#lightning-transaction-sync = { path = "../rust-lightning/lightning-transaction-sync", features = ["esplora-async"] }
#lightning-liquidity = { path = "../lightning-liquidity", features = ["std"] }

bdk = { version = "0.29.0", default-features = false, features = ["std", "async-interface", "use-esplora-async", "sqlite-bundled", "keys-bip39"]}

reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
bitcoin = "0.30.2"
bip39 = "2.0.0"

rand = "0.8.5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures = "0.3"
tokio = { version = "1", default-features = false, features = [ "rt-multi-thread", "time", "sync" ] }
esplora-client = { version = "0.6", default-features = false }
libc = "0.2"
#uniffi = { version = "0.25.0", features = ["build"], optional = true }
uniffi_bindgen = "0.25.0"
uniffi_macros = "0.25.0"
uniffi = { version = "0.25.0", features = ["cli"] }

[target.'cfg(vss)'.dependencies]
vss-client = "0.2"
prost = { version = "0.11.6", default-features = false}

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase"] }

[dev-dependencies]
#lightning = { version = "0.0.121", features = ["std", "_test_utils"] }
#lightning = { git = "https://github.com/lightningdevkit/rust-lightning", branch="main", features = ["std", "_test_utils"] }
lightning = { git = "https://github.com/lightningdevkit/rust-lightning", rev = "36e434d8cefe6b533a2ab378d2d65923433df373", features = ["std", "_test_utils"] }
electrum-client = { version = "0.15.1", default-features = true }
bitcoincore-rpc = { version = "0.17.0", default-features = false }
proptest = "1.0.0"
regex = "1.5.6"

[target.'cfg(not(no_download))'.dev-dependencies]
electrsd = { version = "0.26.0", features = ["legacy", "esplora_a33e97e1", "bitcoind_25_0"] }

[target.'cfg(no_download)'.dev-dependencies]
electrsd = { version = "0.26.0", features = ["legacy"] }

[target.'cfg(cln_test)'.dev-dependencies]
clightningrpc = { version = "0.3.0-beta.8", default-features = false }

[build-dependencies]
#uniffi = { version = "0.25.0", features = ["build", "cli"], optional = true }
uniffi_build = { version = "0.25.0" }
uniffi_bindgen = "0.25.0"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
